--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.AppAplicatestes"
         tools:targetApi="31">
         <activity
+            android:name=".options.OptionsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_options"
+            android:theme="@style/Theme.AppAplicatestes.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".register.RegisterActivy"
             android:exported="false">
             <meta-data
