--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,20 @@
         android:theme="@style/Theme.AppAplicatestes"
         tools:targetApi="31">
         <activity
+            android:name=".options.ui.intelligence.activys.CpmActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".options.ui.intelligence.activys.G36Activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".options.ui.depression.activys.EpdActivity"
             android:exported="false">
             <meta-data
