--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,20 @@
         android:theme="@style/Theme.AppAplicatestes"
         tools:targetApi="31">
         <activity
+            android:name=".options.ui.warning.activys.RotasActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".options.ui.warning.activys.NeupsilinActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".options.ui.warning.activys.BpaActivity"
             android:exported="false">
             <meta-data
